--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,6 +43,7 @@
       <div class="container">
         <footer class="footer">
           {% include svg-icons.html %}
+          <script src="{{ "/prism.js" | prepend: site.baseurl }}"></script>
         </footer>
       </div>
     </div>
